bootcamp/web1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: magnusweb
  name: magnusweb
spec:
  replicas: 3
  selector:
    matchLabels:
      app: magnusweb
  template:
    metadata:
      labels:
        app: magnusweb
    spec:
      containers:
      - image: httpd
        name: httpd
        resources: {}
