bootcamp/nodePoint.yaml
apiVersion: v1
kind: Service
metadata:
  name: magnus-hacking-in-lift
  namespace: magnushackathon
spec:
  selector:
    app: web-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 30007
  type: NodePort
