bootcamp/webs.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: s1
  name: magnusservice
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: magnusweb
  type: NodePort
status:
  loadBalancer: {}
